--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
 
         <div class="logo-div">
             <a href="https://web.facebook.com/george.shalamberidzee" target="_blank"><i
+                    class="fab fa-facebook-f"></i>facebook</a>
+            <a href="https://github.com/ggeoart" id="profile-link" target="_blank"><i
+                    class="fab fa-github"></i>Github</a>
+            <a href="mailto:georgeshalamberidze@yahoo.com" target="_blank"><i class="far fa-envelope"></i>Email</a>
+            <a href="tel:+995577026102"><i class="fas fa-mobile-alt"></i>Mobile</a>
+            <a href="https://www.instagram.com/george.shalamberidze/" target="_blank"><i
+                    class="fab fa-instagram"></i>Instagram</a>
         </div>
     </div>
 
