--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="grid-container">
                 <div class="project1">
                     <a href="https://codepen.io/george-shalamberidze/pen/GRZzQRV" target="_blank">
-                        <img src="/survey-form.png" alt="Survey Form">
+                        <img src="survey-form.png" alt="Survey Form">
                         <p class="project-title">Survey Form</p>
                     </a>
                 </div>
