--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
 
                 <div class="project2">
                     <a href="https://codepen.io/george-shalamberidze/pen/GRZbMxY" target="_blank">
-                        <img src="/landing-page.png" alt="Landing Page">
+                        <img src="landing-page.png" alt="Landing Page">
                         <p class="project-title">Landing Page</p>
                     </a>
                 </div>
 
                 <div class="project3">
                     <a href="https://codepen.io/george-shalamberidze/pen/YzqoBGr" target="_blank">
-                        <img src="/technical-doc.png" alt="Technical Documentation">
+                        <img src="technical-doc.png" alt="Technical Documentation">
                         <p class="project-title">Technical Documentation</p>
                     </a>
                 </div>
 
                 <div class="project4">
                     <a href="https://codepen.io/george-shalamberidze/pen/yLOGOLp" target="_blank">
-                        <img src="/alan watts.png" alt="Technical Documentation Page">
+                        <img src="alan watts.png" alt="Technical Documentation Page">
                         <p class="project-title">Tribute Page</p>
                     </a>
                 </div>
